--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.404z</groupId>
 	<artifactId>clock</artifactId>
@@ -72,7 +72,10 @@
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.2.0</version>
 						<configuration>
-							<javadocExecutable>D:/Program Files/Zulu/zulu-11/bin/javadoc</javadocExecutable>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+							<!--<javadocExecutable>D:/Program Files/Zulu/zulu-11/bin/javadoc</javadocExecutable>-->
 						</configuration>
 						<executions>
 							<execution>
@@ -105,8 +108,8 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.8.1</version>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<source>11</source>
+							<target>11</target>
 						</configuration>
 					</plugin>
 					<plugin>
