--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 	<url>https://github.com/ALI1416/clock</url>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<jdk>1.8</jdk>
+		<maven.compiler.source>${jdk}</maven.compiler.source>
+		<maven.compiler.target>${jdk}</maven.compiler.target>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -56,7 +57,7 @@
 
 	<profiles>
 		<profile>
-			<id>release</id>
+			<id>install</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
@@ -67,19 +68,25 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.8.1</version>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<source>${jdk}</source>
+							<target>${jdk}</target>
 						</configuration>
 					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>deploy</id>
+			<build>
+				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.3</version>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-scm-plugin</artifactId>
-						<version>1.11.2</version>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<source>${jdk}</source>
+							<target>${jdk}</target>
+						</configuration>
 					</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -100,13 +107,12 @@
 						<version>3.2.0</version>
 						<executions>
 							<execution>
-								<id>attach-javadocs</id>
 								<phase>package</phase>
 								<goals>
 									<goal>jar</goal>
 								</goals>
 								<configuration>
-									<source>1.8</source>
+									<source>${jdk}</source>
 									<additionalJOption>-Xdoclint:none</additionalJOption>
 								</configuration>
 							</execution>
@@ -131,13 +137,22 @@
 						<version>2.8.2</version>
 						<executions>
 							<execution>
-								<id>default-deploy</id>
 								<phase>deploy</phase>
 								<goals>
 									<goal>deploy</goal>
 								</goals>
 							</execution>
 						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-release-plugin</artifactId>
+						<version>2.5.3</version>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-scm-plugin</artifactId>
+						<version>1.11.2</version>
 					</plugin>
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
