--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,18 +1,14 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
+
 on:
   push:
-    branches: [ "master" ]
+    paths-ignore:
+      - '**.md'
   pull_request:
-    branches: [ "master" ]
+    paths-ignore:
+      - '**.md'
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
