--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <version>1.4.6</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.26</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <profiles>
