--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,4 @@ jobs:
       run: mvn clean install -P jacoco
 
     - name: Analyze with SonarCloud
-      uses: SonarSource/sonarcloud-github-action@v1.9
-      with:
-        args:
-          -Dsonar.organization=$ORGANIZATION
-          -Dsonar.projectKey=$PROJECT_KEY
-
-    - name: Send coverage report to SonarCloud
-      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=$ORGANIZATION -Dsonar.projectKey=$PROJECT_KEY -Dsonar.login=$SONAR_TOKEN
+      run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=$ORGANIZATION -Dsonar.projectKey=$PROJECT_KEY -Dsonar.login=$SONAR_TOKEN
