--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-java@v5
         with:
           distribution: temurin
-          java-version: 25
+          java-version: 21
           cache: maven
 
       - name: Build with Maven
@@ -32,7 +32,6 @@ jobs:
 
       - name: Analyze with SonarCloud
         env:
-          ORGANIZATION: ali1416
           PROJECT_KEY: ALI1416_clock
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-        run: mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=$ORGANIZATION -Dsonar.projectKey=$PROJECT_KEY -Dsonar.login=$SONAR_TOKEN
+        run: mvn sonar:sonar -Dsonar.projectKey=$PROJECT_KEY
