--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Analyze with SonarCloud
         env:
+          ORGANIZATION: ali1416
           PROJECT_KEY: ALI1416_clock
           SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=$PROJECT_KEY
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.organization=$ORGANIZATION -Dsonar.projectKey=$PROJECT_KEY
